--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>kifuku</title>
     <meta name="description" content="Kifuku Experience the freshness of a Japanese morning with our Telegram mini app" />
-    <meta name="author" content="Lovable" />
+    <meta name="author" content="Kifuku" />
     <meta property="og:image" content="/og-image.png" />
   </head>
 
