--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>kifuku</title>
-    <meta name="description" content="Kifuku Experience the freshness of a Japanese morning with our Telegram mini app" />
+    <meta name="description" content="Build, Bond, and Trade Your Memecoins Directly on Telegram—Join Kifuku and Fuel Your On-Chain Economy!" />
     <meta name="author" content="Kifuku" />
     <meta property="og:image" content="/og-image.png" />
   </head>
